--- a/public/locales/en/home.json
+++ b/public/locales/en/home.json
@@ -1,5 +1,4 @@
 {
-  "h1": "US",
-  "name": "name",
-  "description": "Hello, Welcome to America"
+  "country": "US",
+  "welcome": "Hello, Welcome to America"
 }
