--- a/public/locales/ko/home.json
+++ b/public/locales/ko/home.json
@@ -1,5 +1,4 @@
 {
-  "h1": "한국",
-  "name": "이름",
-  "description": "안녕하세요. 한국에 오신 걸 환영합니다."
+  "country": "한국",
+  "welcome": "안녕하세요. 한국에 오신 걸 환영합니다."
 }
